# Monopoly

./: Board.cpp  Board.h  CMakeLists.txt  CSVReader.h  DiceRoller.cpp  DiceRoller.h  FreeParking.cpp  FreeParking.h  GameState.cpp  GameState.h  Go.cpp  Go.h  GoToJail.cpp  GoToJail.h  Jail.cpp  Jail.h  MonopolyUtility.cpp  MonopolyUtility.h  Move.cpp  Move.h  PayToBank.cpp  PayToBank.h  Player.cpp  Player.h  Property.cpp  Property.h  PropertyManager.cpp  PropertyManager.h  PropertySet.cpp  PropertySet.h  README.md  Rules.cpp  Rules.h  Space.cpp  Space.h  main.cpp
File/: all3  bankrule  board  freeparking  jailboard  onemove  parkingboard  random  rule
